# sterile_insect_technique_multi_patch

./: .gitignore  README.md  pyproject.toml
config/: initial_insects.csv  insect_config.yaml  release_strategy.csv  simulation_config.yaml
notebooks/: final.ipynb
scripts/: data_processing.py  multiple_simulation.py
src/sit_simulation/: __main__.py
src/sit_simulation/agents/: insect.py
src/sit_simulation/core/: config.py  constants.py  initial_insects.py  insect_manager.py  release_strategy.py  simulation.py  spatial_manager.py
src/sit_simulation/observers/: base_observer.py  data_collector.py  logger.py
src/sit_simulation/states/: base_state.py  dead_state.py  egg_state.py  fertile_female_state.py  larva_state.py  mated_female_state.py  pupa_state.py  state_factory.py  sterile_female_state.py  sterile_male_state.py  wild_male_state.py  young_female_state.py
